# gamut

./: .buildinfo  .gitignore  01_build_corpus.py  01_corpus_example.py  02_make_recipe.py  03_cook_sound.py  03_cooking_example.py  LICENSE  MANIFEST.in  README.md  audio.html  camus.py  cli.html  controls.html  dev_uninstall.sh  features.html  files.txt  genindex.html  getting-started.html  index.html  installation.html  modules.html  objects.inv  pip-update.sh  pypi-test.sh  pyproject.toml  requirements.txt  search.html  searchindex.js  settings.json  setup.py  test_package.sh  tox.ini  trial.py  update_doc.sh  update_docs.sh
_sources/: audio.rst.txt  modules.rst.txt
_static/: style.css  test.json
camus/: camus.py
cli/: gamut-parser.py  gamut_parser.py  raw-args.html  workspace.html
doc/source/: conf.py  (+1 more)
docs/: gamut.rst  modules.rst
examples/: 00_general_example.py  01_corpus_example.py  02_recipe_example.py  03_cooking_example.py  basic_mosaic.py  write_audio.py  write_corpus.py  write_mosaic.py
gamut/: README.md  __init__.py  __main__.py  audio.py  base.py  config.py  control.py  controls.py  corpus.py  data.py  envelope.py  features.py  gamut.py  mosaic.py  parser.py  points.py  sys.py  trees.py  utils.py
gui/: overview.html
images/: logo.ai
shell/: dev_install.sh  pypi-deploy.sh  pypi-test.sh  run_doc_server.sh  update_docs.sh
tests/: main.py
tutorials/: audio-effects.html  audio-params.html  basic-audio.html  basic-corpus.html  basic-mosaic.html  basic-pipeline.html  corpus-features.html  mixing-corpora.html  next-steps.html  portability.html
(+59 files in other folders)
